# pico-acceleration-lights

./: CMakeLists.txt
accelerationLights/: CMakeLists.txt  accelerationLights.c
mpu6050/: CMakeLists.txt  mpu6050.c
ws2812/: CMakeLists.txt  ws2812.c
